2.1.0/_sources/gallery/ticks_and_spines/scalarformatter.rst.txt


.. _sphx_glr_gallery_ticks_and_spines_scalarformatter.py:


=========================================
Tick formatting using the ScalarFromatter
=========================================

The example shows use of ScalarFormatter with different settings.

Example 1 : Default

Example 2 : With no Numerical Offset

Example 3 : With Mathtext



.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np
    from matplotlib.ticker import ScalarFormatter







Example 1



.. code-block:: python


    x = np.arange(0, 1, .01)
    fig, [[ax1, ax2], [ax3, ax4]] = plt.subplots(2, 2, figsize=(6, 6))
    fig.text(0.5, 0.975, 'The new formatter, default settings',
             horizontalalignment='center',
             verticalalignment='top')

    ax1.plot(x * 1e5 + 1e10, x * 1e-10 + 1e-5)
    ax1.xaxis.set_major_formatter(ScalarFormatter())
    ax1.yaxis.set_major_formatter(ScalarFormatter())

    ax2.plot(x * 1e5, x * 1e-4)
    ax2.xaxis.set_major_formatter(ScalarFormatter())
    ax2.yaxis.set_major_formatter(ScalarFormatter())

    ax3.plot(-x * 1e5 - 1e10, -x * 1e-5 - 1e-10)
    ax3.xaxis.set_major_formatter(ScalarFormatter())
    ax3.yaxis.set_major_formatter(ScalarFormatter())

    ax4.plot(-x * 1e5, -x * 1e-4)
    ax4.xaxis.set_major_formatter(ScalarFormatter())
    ax4.yaxis.set_major_formatter(ScalarFormatter())

    fig.subplots_adjust(wspace=0.7, hspace=0.6)




.. image:: /gallery/ticks_and_spines/images/sphx_glr_scalarformatter_001.png
    :align: center




Example 2



.. code-block:: python


    x = np.arange(0, 1, .01)
    fig, [[ax1, ax2], [ax3, ax4]] = plt.subplots(2, 2, figsize=(6, 6))
    fig.text(0.5, 0.975, 'The new formatter, no numerical offset',
             horizontalalignment='center',
             verticalalignment='top')

    ax1.plot(x * 1e5 + 1e10, x * 1e-10 + 1e-5)
    ax1.xaxis.set_major_formatter(ScalarFormatter(useOffset=False))
    ax1.yaxis.set_major_formatter(ScalarFormatter(useOffset=False))

    ax2.plot(x * 1e5, x * 1e-4)
    ax2.xaxis.set_major_formatter(ScalarFormatter(useOffset=False))
    ax2.yaxis.set_major_formatter(ScalarFormatter(useOffset=False))

    ax3.plot(-x * 1e5 - 1e10, -x * 1e-5 - 1e-10)
    ax3.xaxis.set_major_formatter(ScalarFormatter(useOffset=False))
    ax3.yaxis.set_major_formatter(ScalarFormatter(useOffset=False))

    ax4.plot(-x * 1e5, -x * 1e-4)
    ax4.xaxis.set_major_formatter(ScalarFormatter(useOffset=False))
    ax4.yaxis.set_major_formatter(ScalarFormatter(useOffset=False))

    fig.subplots_adjust(wspace=0.7, hspace=0.6)




.. image:: /gallery/ticks_and_spines/images/sphx_glr_scalarformatter_002.png
    :align: center




Example 3



.. code-block:: python


    x = np.arange(0, 1, .01)
    fig, [[ax1, ax2], [ax3, ax4]] = plt.subplots(2, 2, figsize=(6, 6))
    fig.text(0.5, 0.975, 'The new formatter, with mathtext',
             horizontalalignment='center',
             verticalalignment='top')

    ax1.plot(x * 1e5 + 1e10, x * 1e-10 + 1e-5)
    ax1.xaxis.set_major_formatter(ScalarFormatter(useMathText=True))
    ax1.yaxis.set_major_formatter(ScalarFormatter(useMathText=True))

    ax2.plot(x * 1e5, x * 1e-4)
    ax2.xaxis.set_major_formatter(ScalarFormatter(useMathText=True))
    ax2.yaxis.set_major_formatter(ScalarFormatter(useMathText=True))

    ax3.plot(-x * 1e5 - 1e10, -x * 1e-5 - 1e-10)
    ax3.xaxis.set_major_formatter(ScalarFormatter(useMathText=True))
    ax3.yaxis.set_major_formatter(ScalarFormatter(useMathText=True))

    ax4.plot(-x * 1e5, -x * 1e-4)
    ax4.xaxis.set_major_formatter(ScalarFormatter(useMathText=True))
    ax4.yaxis.set_major_formatter(ScalarFormatter(useMathText=True))

    fig.subplots_adjust(wspace=0.7, hspace=0.6)

    plt.show()



.. image:: /gallery/ticks_and_spines/images/sphx_glr_scalarformatter_003.png
    :align: center




**Total running time of the script:** ( 0 minutes  0.207 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: scalarformatter.py <scalarformatter.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: scalarformatter.ipynb <scalarformatter.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
